@@ -187,7 +187,7 @@ name|comparatorSource
 decl_stmt|;
 comment|// Used for 'sortMissingFirst/Last'
 DECL|field|missingValue
-specifier|public
+specifier|protected
 name|Object
 name|missingValue
 init|=
@@ -292,6 +292,18 @@ return|;
 block|}
 block|}
 decl_stmt|;
+comment|/** Return the value to use for documents that don't have a value.    *  A value of {@code null} indicates that default should be used. */
+DECL|method|getMissingValue
+specifier|public
+name|Object
+name|getMissingValue
+parameter_list|()
+block|{
+return|return
+name|missingValue
+return|;
+block|}
+comment|/** Set the value to use for documents that don't have a value. */
 DECL|method|setMissingValue
 specifier|public
 name|void
@@ -340,29 +352,155 @@ elseif|else
 if|if
 condition|(
 name|type
-operator|!=
+operator|==
 name|Type
 operator|.
 name|INT
-operator|&&
-name|type
+condition|)
+block|{
+if|if
+condition|(
+name|missingValue
 operator|!=
-name|Type
+literal|null
+operator|&&
+name|missingValue
 operator|.
-name|FLOAT
-operator|&&
-name|type
+name|getClass
+argument_list|()
 operator|!=
+name|Integer
+operator|.
+name|class
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Missing values for Type.INT can only be of type java.lang.Integer, but got "
+operator|+
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+throw|;
+block|}
+elseif|else
+if|if
+condition|(
+name|type
+operator|==
 name|Type
 operator|.
 name|LONG
-operator|&&
-name|type
+condition|)
+block|{
+if|if
+condition|(
+name|missingValue
 operator|!=
+literal|null
+operator|&&
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+operator|!=
+name|Long
+operator|.
+name|class
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Missing values for Type.LONG can only be of type java.lang.Long, but got "
+operator|+
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+throw|;
+block|}
+elseif|else
+if|if
+condition|(
+name|type
+operator|==
+name|Type
+operator|.
+name|FLOAT
+condition|)
+block|{
+if|if
+condition|(
+name|missingValue
+operator|!=
+literal|null
+operator|&&
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+operator|!=
+name|Float
+operator|.
+name|class
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Missing values for Type.FLOAT can only be of type java.lang.Float, but got "
+operator|+
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+throw|;
+block|}
+elseif|else
+if|if
+condition|(
+name|type
+operator|==
 name|Type
 operator|.
 name|DOUBLE
 condition|)
+block|{
+if|if
+condition|(
+name|missingValue
+operator|!=
+literal|null
+operator|&&
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+operator|!=
+name|Double
+operator|.
+name|class
+condition|)
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Missing values for Type.DOUBLE can only be of type java.lang.Double, but got "
+operator|+
+name|missingValue
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+throw|;
+block|}
+else|else
 block|{
 throw|throw
 operator|new
